--- a/MeshViewer/css/styling/style_panel.css
+++ b/MeshViewer/css/styling/style_panel.css
@@ -122,7 +122,6 @@ html, body {
   left: 0;
   /*width: 100%;
   height: 100%;*/
-  min-width: 250px;
   display: inline-block;
   background: transparent;
   cursor: pointer;
@@ -228,7 +227,7 @@ html, body {
   -webkit-transition: top 0.3s 0s;
   -moz-transition: top 0.3s 0s;
   transition: top 0.3s 0s;
-  min-width: 250px;
+  min-width: 275px;
 }
 .cd-panel-header h1 {
   font-weight: bold;
@@ -347,7 +346,7 @@ html, body {
   -webkit-transition-delay: 0.3s;
   -moz-transition-delay: 0.3s;
   transition-delay: 0.3s;
-  min-width: 250px;
+  min-width: 275px;
 }
 .from-right .cd-panel-container {
   right: 0;
@@ -401,7 +400,7 @@ html, body {
   overflow: auto;
   /* smooth scrolling on touch devices */
   -webkit-overflow-scrolling: touch;
-  min-width: 200px;
+  min-width: 275px;
 }
 .cd-panel-content p {
   font-size: 14px;
