--- a/MeshViewer/css/styling/style_slider.css
+++ b/MeshViewer/css/styling/style_slider.css
@@ -1,6 +1,6 @@
 input[type=range] {
   -webkit-appearance: none;
-  margin: 5px 0;
+  margin:0;
   width: 100%;
 }
 input[type=range]:focus {
